--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -12,8 +12,7 @@ on:
 
 jobs:
   clang-format:
-    # TODO specify exact version
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@master
       - uses: DoozyX/clang-format-lint-action@v0.5
@@ -25,7 +24,7 @@ jobs:
   # Commented-out, as it keeps failing with http 429 error - too many requests
   # e.g. https://github.com/approvals/ApprovalTests.cpp/runs/541867195
   #  markdown-link-check:
-  #    runs-on: ubuntu-latest
+  #    runs-on: ubuntu-18.04
   #    steps:
   #      - uses: actions/checkout@master
   #      - uses: actions/setup-node@v1
@@ -46,13 +45,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - job-name: ubuntu-latest
-            os: ubuntu-latest
+          - job-name: ubuntu-18.04
+            os: ubuntu-18.04
             generator: '"Unix Makefiles"'
             in_source_build: true
 
-          - job-name: ubuntu-latest-ninja
-            os: ubuntu-latest
+          - job-name: ubuntu-18.04-ninja
+            os: ubuntu-18.04
             generator: '"Ninja"'
             in_source_build: false
     runs-on: ${{ matrix.os }}
