e   Try fixing Windows builds again

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -154,7 +154,7 @@ jobs:
       - name: set up boost for windows
         run: |
           ${boostroot} = "${env:BOOST_ROOT_1_72_0}"
-          echo "BOOST_ROOT=${boostroot}" >> $GITHUB_ENV
+          echo "BOOST_ROOT=${boostroot}" >> ${env:GITHUB_ENV}
           echo "BOOST_INCLUDEDIR=${boostroot}\include" >> ${env:GITHUB_ENV}
           echo "BOOST_LIBRARYDIR=${boostroot}\lib" >> ${env:GITHUB_ENV}
 
