--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -79,6 +79,13 @@ jobs:
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
+          - job-name: 'gcc10'
+            os: ubuntu-18.04
+            c-compiler: 'gcc-10'
+            cxx-compiler: 'g++-10'
+            generator: '"Unix Makefiles"'
+            relative_build_dir_path: ''
+
           - job-name: 'gcc7 ninja'
             os: ubuntu-18.04
             c-compiler: 'gcc-7'
