e   Comment out clang-7 build as not supportedon GitHub
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -51,12 +51,12 @@ jobs:
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
-          - job-name: 'clang7'
-            os: ubuntu-18.04
-            c-compiler: 'clang-7'
-            cxx-compiler: 'clang++-7'
-            generator: '"Unix Makefiles"'
-            relative_build_dir_path: ''
+#          - job-name: 'clang7'
+#            os: ubuntu-18.04
+#            c-compiler: 'clang-7'
+#            cxx-compiler: 'clang++-7'
+#            generator: '"Unix Makefiles"'
+#            relative_build_dir_path: ''
 
           - job-name: 'clang8'
             os: ubuntu-18.04
