--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -36,6 +36,7 @@ jobs:
   #        run: ./scripts/check_links.sh
 
   Linux:
+    needs: clang-format
     env:
       BUILD_DIR_PATH: ${{ github.workspace }}/${{ matrix.relative_build_dir_path }}build_space
       CC: ${{ matrix.c-compiler }}
@@ -133,6 +134,7 @@ jobs:
           ctest --verbose --output-on-failure -C Debug
 
   macOS:
+    needs: clang-format
     env:
       BUILD_DIR_PATH: ${{ github.workspace }}/${{ matrix.relative_build_dir_path }}build_space
       DEVELOPER_DIR: '/Applications/Xcode_${{ matrix.xcode-version }}.app/Contents/Developer'
@@ -195,6 +197,7 @@ jobs:
           ctest --verbose --output-on-failure -C Debug
 
   Windows:
+    needs: clang-format
     env:
       BUILD_DIR_PATH: ${{ github.workspace }}/build_space
     strategy:
